--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="theme-color" content="#000000" />
 	<link rel="apple-touch-icon" href="/logo.png" />
 	<link rel="manifest" href="/manifest.json" />
+	<link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
 	<title>Safeli Escrow</title>
 	<meta name="description" content="Safeli Escrow System">
 	<meta name="twitter:card" content="summary_large_image">
